--- a/website/pages/stats.html
+++ b/website/pages/stats.html
@@ -26,26 +26,125 @@
 
     }
 
+    .menu_3 {
+        background-color: #000000;
+        margin: 0 0 0 20px;
+    }
+    .marginn {
+        padding: 5px 0 5px 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_2 {
+        padding: 5px 0 0 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_3 {
+        margin: 15px 20px 0 20px;
+        border: 1px solid white;
+        background-color: #3D3D3D;
+    }
+    .buttonn_2 {
+        background-color: #000000;
+        border: 1px solid white;
+        width: 98%;
+        color: white;
+    }
+    .buttonn_3 {
+        color: red;
+    }
+
+    .menu_2 {
+        background-color: #000000;
+        margin: 0 20px 0 0;
+    }
+
+    .menu_4 {
+        background-color: #000000;
+    }
+
+    .menu_5 {
+        background-color: #ECF3FB;
+    }
+
 </style>
 
-<div id="topCharts">
 
-    <div class="chartWrapper">
-        <div class="chartLabel">Workers Per Pool</div>
-        <div class="chartHolder"><svg id="poolWorkers"/></div>
-    </div>
+<table style="height: 95%; width: 100%" class="menu_4">
+    <tr>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_3">
+                <tr>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="https://www.digibyte.io/digibyte-wallet-downloads">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">get wallet<br>
+                                    <span class="buttonn_3">得到錢包</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://ceo-24.xyz/">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">exchange DGB<br>
+                                    <span class="buttonn_3">交換 DGB</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td valign="top" class="menu_5">
+            <div id="topCharts">
 
-    <div class="chartWrapper">
-        <div class="chartLabel">Hashrate Per Pool</div>
-        <div class="chartHolder"><svg id="poolHashrate"/></div>
-    </div>
+                <div class="chartWrapper">
+                    <div class="chartLabel">Workers Per Pool</div>
+                    <div class="chartHolder"><svg id="poolWorkers"/></div>
+                </div>
 
-    <div class="chartWrapper">
-        <div class="chartLabel">Blocks Pending Per Pool</div>
-        <div class="chartHolder"><svg id="poolBlocks"/></div>
-    </div>
+                <div class="chartWrapper">
+                    <div class="chartLabel">Hashrate Per Pool</div>
+                    <div class="chartHolder"><svg id="poolHashrate"/></div>
+                </div>
 
-</div>
+                <div class="chartWrapper">
+                    <div class="chartLabel">Blocks Pending Per Pool</div>
+                    <div class="chartHolder"><svg id="poolBlocks"/></div>
+                </div>
+
+            </div>
+
+        </td>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_2">
+                <tr>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="http://maodgb256.xyz:8080/getting_started">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">switch pool<br>
+                                    <span class="buttonn_3">切換池</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://maodgb256.xyz:5025">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">p2pool</button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
 
 
 
