--- a/website/pages/workers.html
+++ b/website/pages/workers.html
@@ -10,8 +10,8 @@
     }
 
     .chartWrapper {
-        border: solid 1px #c7c7c7;
-        border-radius: 5px;
+        /*border: solid 1px #c7c7c7;
+        border-radius: 5px;*/
         padding: 5px;
         margin-bottom: 18px;
     }
@@ -30,37 +30,152 @@
         width: 100%;
     }
 
+    .menu_3 {
+        background-color: #000000;
+        margin: 0 0 0 20px;
+    }
+    .marginn {
+        padding: 5px 0 5px 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_2 {
+        padding: 5px 0 0 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_3 {
+        margin: 15px 20px 0 20px;
+        border: 1px solid white;
+        background-color: #3D3D3D;
+    }
+    .buttonn_2 {
+        background-color: #000000;
+        border: 1px solid white;
+        width: 98%;
+        color: white;
+    }
+    .buttonn_3 {
+        color: red;
+    }
+
+    .menu_2 {
+        background-color: #000000;
+        margin: 0 20px 0 0;
+    }
+
+    .menu_4 {
+        background-color: #000000;
+    }
+
+    .menu_5 {
+        background-color: #E7DDDD;
+    }
+
+    .menu_6 {
+        background-color: #F1F1F1;
+    }
+
+    .menu_7 {
+        width: 96%;
+        margin: 20px 0 0 25px;
+        height: 80%;
+    }
+
+    .menu_8 {
+        margin: 0 0 0 20px;
+        padding: 0 0 0 20px;
+        background-color: #F1F1F1;
+    }
+
 </style>
 
 
-<div id="topCharts">
-
-{{ for(var pool in it.stats.pools) { }}
-
-    <div class="chartWrapper">
-        <div class="chartLabel">{{=it.stats.pools[pool].name}}</div>
-        <div class="chartHolder">
-            <table class="pure-table">
-                <thead>
+<table style="height: 95%; width: 100%" class="menu_4">
+    <tr>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_3">
                 <tr>
-                    <th>Address</th>
-                    <th>Shares</th>
-                    <th>Invalid shares</th>
-                    <th>Efficiency</th>
-                    <th>Hashrate</th>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="https://www.digibyte.io/digibyte-wallet-downloads">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">get wallet<br>
+                                    <span class="buttonn_3">得到錢包</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
                 </tr>
-                </thead>
-                {{ for(var worker in it.stats.pools[pool].workers) { }}
-                   {{var workerstat = it.stats.pools[pool].workers[worker];}}
-                    <tr class="pure-table-odd">
-                        <td>{{=worker}}</td>
-                        <td>{{=Math.floor(workerstat.shares)}}</td>
-                        <td>{{=Math.floor(workerstat.invalidshares)}}</td>
-                        <td>{{? workerstat.shares > 0}} {{=Math.floor(10000 * workerstat.shares / (workerstat.shares + workerstat.invalidshares)) / 100}}% {{??}} 0% {{?}}</td>
-                        <td>{{=workerstat.hashrateString}}</td>
-                    </tr>
-                {{ } }}
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://ceo-24.xyz/">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">exchange DGB<br>
+                                    <span class="buttonn_3">交換 DGB</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
             </table>
-        </div>
-    </div>
-{{ } }}
+        </td>
+        <td valign="top" >
+
+            <div id="topCharts">
+
+                {{ for(var pool in it.stats.pools) { }}
+
+                <div class="chartWrapper">
+                    <div class="chartLabel menu_6">{{=it.stats.pools[pool].name}}</div>
+                    <div class="chartHolder">
+                        <table class="pure-table">
+                            <thead>
+                            <tr>
+                                <th>Address</th>
+                                <th>Shares</th>
+                                <th>Invalid shares</th>
+                                <th>Efficiency</th>
+                                <th>Hashrate</th>
+                            </tr>
+                            </thead>
+                            {{ for(var worker in it.stats.pools[pool].workers) { }}
+                            {{var workerstat = it.stats.pools[pool].workers[worker];}}
+                            <tr class="pure-table-odd">
+                                <td>{{=worker}}</td>
+                                <td>{{=Math.floor(workerstat.shares)}}</td>
+                                <td>{{=Math.floor(workerstat.invalidshares)}}</td>
+                                <td>{{? workerstat.shares > 0}} {{=Math.floor(10000 * workerstat.shares / (workerstat.shares + workerstat.invalidshares)) / 100}}% {{??}} 0% {{?}}</td>
+                                <td>{{=workerstat.hashrateString}}</td>
+                            </tr>
+                            {{ } }}
+                        </table>
+                    </div>
+                </div>
+                {{ } }}
+            </div>
+        </td>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_2">
+                <tr>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="http://maodgb256.xyz:8080/getting_started">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">switch pool<br>
+                                    <span class="buttonn_3">切換池</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://maodgb256.xyz:5025">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">p2pool</button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
