--- a/website/pages/tbs.html
+++ b/website/pages/tbs.html
@@ -30,35 +30,167 @@
         width: 100%;
     }
 
+    .menu_3 {
+        background-color: #000000;
+        margin: 0 0 0 20px;
+    }
+    .marginn {
+        padding: 5px 0 5px 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_2 {
+        padding: 5px 0 0 0;
+        margin: 0 5px 0 5px;
+    }
+    .marginn_3 {
+        margin: 15px 20px 0 20px;
+        border: 1px solid white;
+        background-color: #3D3D3D;
+    }
+    .buttonn_2 {
+        background-color: #000000;
+        border: 1px solid white;
+        width: 98%;
+        color: white;
+    }
+    .buttonn_3 {
+        color: red;
+    }
+
+    .menu_2 {
+        background-color: #000000;
+        margin: 0 20px 0 0;
+    }
+
+    .menu_4 {
+        background-color: #000000;
+    }
+
+    .menu_5 {
+        background-color: #E7DDDD;
+    }
+
+    .menu_6 {
+        background-color: #F1F1F1;
+    }
+
+    .menu_7 {
+        width: 96%;
+        margin: 20px 0 0 25px;
+        height: 80%;
+    }
+
+    .menu_8 {
+        margin: 0 0 0 20px;
+        padding: 0 0 0 20px;
+        background-color: #F1F1F1;
+    }
+
+    .heading{
+        font-weight: bold;
+        margin: 10px 0px 5px 0
+        color: white;
+    }
+
 </style>
 
-<table class="pure-table">
-    <thead>
+
+<table style="height: 95%; width: 100%" class="menu_4">
     <tr>
-        <th>Pool</th>
-        <th>Algo</th>
-        <th>Workers</th>
-        <th>Valid Shares</th>
-        <th>Invalid Shares</th>
-        <th>Total Blocks</th>
-        <th>Pending</th>
-        <th>Confirmed</th>
-        <th>Orphaned</th>
-        <th>Hashrate</th>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_3">
+                <tr>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="https://www.digibyte.io/digibyte-wallet-downloads">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">get wallet<br>
+                                    <span class="buttonn_3">得到錢包</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://ceo-24.xyz/">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">exchange DGB<br>
+                                    <span class="buttonn_3">交換 DGB</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td valign="top" >
+            <table  class="menu_7" border="1">
+                <thead class="menu_5">
+                <tr>
+                    <th>Pool</th>
+                    <th>Algo</th>
+                    <th>Workers</th>
+                    <th>Valid Shares</th>
+                    <th>Invalid Shares</th>
+                    <th>Total Blocks</th>
+                    <th>Pending</th>
+                    <th>Confirmed</th>
+                    <th>Orphaned</th>
+                    <th>Hashrate</th>
+                </tr>
+                </thead>
+                {{ for(var pool in it.stats.pools) { }}
+                <tr class="menu_6" valign="top" align="center">
+                    <td>{{=it.stats.pools[pool].name}}</td>
+                    <td>{{=it.stats.pools[pool].algorithm}}</td>
+                    <td>{{=Object.keys(it.stats.pools[pool].workers).length}}</td>
+                    <td>{{=it.stats.pools[pool].poolStats.validShares}}</td>
+                    <td>{{=it.stats.pools[pool].poolStats.invalidShares}}</td>
+                    <td>{{=it.stats.pools[pool].poolStats.validBlocks}}</td>
+                    <td>{{=it.stats.pools[pool].blocks.pending}}</td>
+                    <td>{{=it.stats.pools[pool].blocks.confirmed}}</td>
+                    <td>{{=it.stats.pools[pool].blocks.orphaned}}</td>
+                    <td>{{=it.stats.pools[pool].hashrateString}}</td>
+                </tr>
+                {{ } }}
+                <tr>
+                    <td colspan="10" align="center">
+                        <form id="search" class="pure-form pure-form-stacked marginn" role="search" action="https://chainz.cryptoid.info/dgb/search.dws" method="get">
+                            <fieldset>
+                                <input type="text" class="form-control" id="searchField" name="q" placeholder="Search address, block, transaction, tag..." style="width:98%;">
+                                <button type="submit" class="pure-button buttonn_2">Address<br>
+                                    <span class="buttonn_3">地址</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
+        <td valign="top"  style="width: 10%">
+            <table style="height: 94%;" class="menu_2">
+                <tr>
+                    <td valign="top" class="marginn" align="center">
+                        <form name="getWallet" class="pure-form pure-form-stacked marginn" method="get" action="http://maodgb256.xyz:8080/getting_started">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">switch pool<br>
+                                    <span class="buttonn_3">切換池</span></button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom" class="marginn" align="center">
+                        <form name="exchangeDGB" class="pure-form pure-form-stacked marginn_2" method="get" action="http://maodgb256.xyz:5025">
+                            <fieldset>
+                                <input type="hidden" value="1">
+                                <button type="submit" class="pure-button buttonn_2">p2pool</button>
+                            </fieldset>
+                        </form>
+                    </td>
+                </tr>
+            </table>
+        </td>
     </tr>
-    </thead>
-    {{ for(var pool in it.stats.pools) { }}
-    <tr class="pure-table-odd">
-        <td>{{=it.stats.pools[pool].name}}</td>
-        <td>{{=it.stats.pools[pool].algorithm}}</td>
-        <td>{{=Object.keys(it.stats.pools[pool].workers).length}}</td>
-        <td>{{=it.stats.pools[pool].poolStats.validShares}}</td>
-        <td>{{=it.stats.pools[pool].poolStats.invalidShares}}</td>
-        <td>{{=it.stats.pools[pool].poolStats.validBlocks}}</td>
-        <td>{{=it.stats.pools[pool].blocks.pending}}</td>
-        <td>{{=it.stats.pools[pool].blocks.confirmed}}</td>
-        <td>{{=it.stats.pools[pool].blocks.orphaned}}</td>
-        <td>{{=it.stats.pools[pool].hashrateString}}</td>
-    </tr>
-    {{ } }}
 </table>
+
